{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 115,
  "lineage": "20dab18f-469a-b88f-4dc2-e15302763125",
  "resources": [
    {
      "module": "module.linux",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/dfbc44eb-f4ee-4bb1-952a-f94f1edcd71d/resourceGroups/n01498358-assignment1-RG/providers/Microsoft.Network/networkInterfaces/nic-1",
            "internal_domain_name_suffix": "24ro4udw225ejjzzdshlgaj1bc.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "nic-ip-config-1",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/dfbc44eb-f4ee-4bb1-952a-f94f1edcd71d/resourceGroups/n01498358-assignment1-RG/providers/Microsoft.Network/publicIPAddresses/publicip-1",
                "subnet_id": "/subscriptions/dfbc44eb-f4ee-4bb1-952a-f94f1edcd71d/resourceGroups/n01498358-assignment1-RG/providers/Microsoft.Network/virtualNetworks/8358vnet/subnets/subnet1"
              }
            ],
            "location": "eastus",
            "mac_address": "60-45-BD-DA-3A-C6",
            "name": "nic-1",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "n01498358-assignment1-RG",
            "tags": {
              "Environment": "Lab",
              "ExpirationDate": "2023-06-30",
              "Name": "sahil.solanki",
              "Project": "Automation Project – Assignment 1"
            },
            "virtual_machine_id": "/subscriptions/dfbc44eb-f4ee-4bb1-952a-f94f1edcd71d/resourceGroups/n01498358-assignment1-RG/providers/Microsoft.Compute/virtualMachines/vm-1"
          },
          "dependencies": [
            "module.linux.azurerm_public_ip.public_ip",
            "module.network.azurerm_subnet.subnet",
            "module.network.azurerm_virtual_network.vnet",
            "module.rgroup.azurerm_resource_group.rgroup"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/dfbc44eb-f4ee-4bb1-952a-f94f1edcd71d/resourceGroups/n01498358-assignment1-RG/providers/Microsoft.Network/networkInterfaces/nic-2",
            "internal_domain_name_suffix": "24ro4udw225ejjzzdshlgaj1bc.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "nic-ip-config-2",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/dfbc44eb-f4ee-4bb1-952a-f94f1edcd71d/resourceGroups/n01498358-assignment1-RG/providers/Microsoft.Network/publicIPAddresses/publicip-2",
                "subnet_id": "/subscriptions/dfbc44eb-f4ee-4bb1-952a-f94f1edcd71d/resourceGroups/n01498358-assignment1-RG/providers/Microsoft.Network/virtualNetworks/8358vnet/subnets/subnet1"
              }
            ],
            "location": "eastus",
            "mac_address": "60-45-BD-A6-E9-ED",
            "name": "nic-2",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "n01498358-assignment1-RG",
            "tags": {
              "Environment": "Lab",
              "ExpirationDate": "2023-06-30",
              "Name": "sahil.solanki",
              "Project": "Automation Project – Assignment 1"
            },
            "virtual_machine_id": "/subscriptions/dfbc44eb-f4ee-4bb1-952a-f94f1edcd71d/resourceGroups/n01498358-assignment1-RG/providers/Microsoft.Compute/virtualMachines/vm-2"
          },
          "dependencies": [
            "module.linux.azurerm_public_ip.public_ip",
            "module.network.azurerm_subnet.subnet",
            "module.network.azurerm_virtual_network.vnet",
            "module.rgroup.azurerm_resource_group.rgroup"
          ]
        }
      ]
    },
    {
      "module": "module.linux",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/dfbc44eb-f4ee-4bb1-952a-f94f1edcd71d/resourceGroups/n01498358-assignment1-RG/providers/Microsoft.Network/publicIPAddresses/publicip-1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.124.254.255",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "publicip-1",
            "resource_group_name": "n01498358-assignment1-RG",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "Environment": "Lab",
              "ExpirationDate": "2023-06-30",
              "Name": "sahil.solanki",
              "Project": "Automation Project – Assignment 1"
            }
          },
          "dependencies": [
            "module.rgroup.azurerm_resource_group.rgroup"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/dfbc44eb-f4ee-4bb1-952a-f94f1edcd71d/resourceGroups/n01498358-assignment1-RG/providers/Microsoft.Network/publicIPAddresses/publicip-2",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.120.84.77",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "publicip-2",
            "resource_group_name": "n01498358-assignment1-RG",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "Environment": "Lab",
              "ExpirationDate": "2023-06-30",
              "Name": "sahil.solanki",
              "Project": "Automation Project – Assignment 1"
            }
          },
          "dependencies": [
            "module.rgroup.azurerm_resource_group.rgroup"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/dfbc44eb-f4ee-4bb1-952a-f94f1edcd71d/resourceGroups/n01498358-assignment1-RG/providers/Microsoft.Network/loadBalancers/mylb/frontendIPConfigurations/PublicIPAddress",
                "name": "PublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/dfbc44eb-f4ee-4bb1-952a-f94f1edcd71d/resourceGroups/n01498358-assignment1-RG/providers/Microsoft.Network/publicIPAddresses/PublicIPForLB"
              }
            ],
            "id": "/subscriptions/dfbc44eb-f4ee-4bb1-952a-f94f1edcd71d/resourceGroups/n01498358-assignment1-RG/providers/Microsoft.Network/loadBalancers/mylb",
            "location": "eastus",
            "name": "mylb",
            "resource_group_name": "n01498358-assignment1-RG",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.loadbalancer.azurerm_public_ip.lbpublicip",
            "module.rgroup.azurerm_resource_group.rgroup"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/dfbc44eb-f4ee-4bb1-952a-f94f1edcd71d/resourceGroups/n01498358-assignment1-RG/providers/Microsoft.Network/loadBalancers/mylb/backendAddressPools/pool-1",
            "loadbalancer_id": "/subscriptions/dfbc44eb-f4ee-4bb1-952a-f94f1edcd71d/resourceGroups/n01498358-assignment1-RG/providers/Microsoft.Network/loadBalancers/mylb",
            "name": "pool-1"
          },
          "dependencies": [
            "module.loadbalancer.azurerm_lb.lb",
            "module.loadbalancer.azurerm_public_ip.lbpublicip",
            "module.rgroup.azurerm_resource_group.rgroup"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/dfbc44eb-f4ee-4bb1-952a-f94f1edcd71d/resourceGroups/n01498358-assignment1-RG/providers/Microsoft.Network/loadBalancers/mylb/backendAddressPools/pool-2",
            "loadbalancer_id": "/subscriptions/dfbc44eb-f4ee-4bb1-952a-f94f1edcd71d/resourceGroups/n01498358-assignment1-RG/providers/Microsoft.Network/loadBalancers/mylb",
            "name": "pool-2"
          },
          "dependencies": [
            "module.loadbalancer.azurerm_lb.lb",
            "module.loadbalancer.azurerm_public_ip.lbpublicip",
            "module.rgroup.azurerm_resource_group.rgroup"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/dfbc44eb-f4ee-4bb1-952a-f94f1edcd71d/resourceGroups/n01498358-assignment1-RG/providers/Microsoft.Network/loadBalancers/mylb/probes/probe",
            "interval_in_seconds": 5,
            "loadbalancer_id": "/subscriptions/dfbc44eb-f4ee-4bb1-952a-f94f1edcd71d/resourceGroups/n01498358-assignment1-RG/providers/Microsoft.Network/loadBalancers/mylb",
            "name": "probe",
            "number_of_probes": 2,
            "port": 80,
            "probe_threshold": 1,
            "protocol": "Http",
            "request_path": "/"
          },
          "dependencies": [
            "module.loadbalancer.azurerm_lb.lb",
            "module.loadbalancer.azurerm_public_ip.lbpublicip",
            "module.rgroup.azurerm_resource_group.rgroup"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "lbpublicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/dfbc44eb-f4ee-4bb1-952a-f94f1edcd71d/resourceGroups/n01498358-assignment1-RG/providers/Microsoft.Network/publicIPAddresses/PublicIPForLB",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.115.4.31",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "PublicIPForLB",
            "resource_group_name": "n01498358-assignment1-RG",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.rgroup.azurerm_resource_group.rgroup"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/dfbc44eb-f4ee-4bb1-952a-f94f1edcd71d/resourceGroups/n01498358-assignment1-RG/providers/Microsoft.Network/networkSecurityGroups/n01498358-assignment1-RG-nsg",
            "location": "eastus",
            "name": "n01498358-assignment1-RG-nsg",
            "resource_group_name": "n01498358-assignment1-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow_ssh",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rgroup.azurerm_resource_group.rgroup"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/dfbc44eb-f4ee-4bb1-952a-f94f1edcd71d/resourceGroups/n01498358-assignment1-RG/providers/Microsoft.Network/networkSecurityGroups/n01498358-assignment1-RG-nsg/securityRules/allow_ssh",
            "name": "allow_ssh",
            "network_security_group_name": "n01498358-assignment1-RG-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "n01498358-assignment1-RG",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.azurerm_network_security_group.nsg",
            "module.rgroup.azurerm_resource_group.rgroup"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/dfbc44eb-f4ee-4bb1-952a-f94f1edcd71d/resourceGroups/n01498358-assignment1-RG/providers/Microsoft.Network/virtualNetworks/8358vnet/subnets/subnet1",
            "name": "subnet1",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "n01498358-assignment1-RG",
            "virtual_network_name": "8358vnet"
          },
          "dependencies": [
            "module.network.azurerm_virtual_network.vnet",
            "module.rgroup.azurerm_resource_group.rgroup"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "subnet_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/dfbc44eb-f4ee-4bb1-952a-f94f1edcd71d/resourceGroups/n01498358-assignment1-RG/providers/Microsoft.Network/virtualNetworks/8358vnet/subnets/subnet1",
            "network_security_group_id": "/subscriptions/dfbc44eb-f4ee-4bb1-952a-f94f1edcd71d/resourceGroups/n01498358-assignment1-RG/providers/Microsoft.Network/networkSecurityGroups/n01498358-assignment1-RG-nsg",
            "subnet_id": "/subscriptions/dfbc44eb-f4ee-4bb1-952a-f94f1edcd71d/resourceGroups/n01498358-assignment1-RG/providers/Microsoft.Network/virtualNetworks/8358vnet/subnets/subnet1"
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.nsg",
            "module.network.azurerm_subnet.subnet",
            "module.network.azurerm_virtual_network.vnet",
            "module.rgroup.azurerm_resource_group.rgroup"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "50efa2e7-e776-443e-a739-1c8eb3013b0a",
            "id": "/subscriptions/dfbc44eb-f4ee-4bb1-952a-f94f1edcd71d/resourceGroups/n01498358-assignment1-RG/providers/Microsoft.Network/virtualNetworks/8358vnet",
            "location": "eastus",
            "name": "8358vnet",
            "resource_group_name": "n01498358-assignment1-RG",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/dfbc44eb-f4ee-4bb1-952a-f94f1edcd71d/resourceGroups/n01498358-assignment1-RG/providers/Microsoft.Network/virtualNetworks/8358vnet/subnets/subnet1",
                "name": "subnet1",
                "security_group": "/subscriptions/dfbc44eb-f4ee-4bb1-952a-f94f1edcd71d/resourceGroups/n01498358-assignment1-RG/providers/Microsoft.Network/networkSecurityGroups/n01498358-assignment1-RG-nsg"
              }
            ],
            "tags": {
              "Environment": "Lab",
              "ExpirationDate": "2023-06-30",
              "Name": "sahil.solanki",
              "Project": "Automation Project – Assignment 1"
            }
          },
          "dependencies": [
            "module.rgroup.azurerm_resource_group.rgroup"
          ]
        }
      ]
    },
    {
      "module": "module.vm_windows",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/dfbc44eb-f4ee-4bb1-952a-f94f1edcd71d/resourceGroups/n01498358-assignment1-RG/providers/Microsoft.Network/networkInterfaces/8358vm-nic-windows",
            "internal_domain_name_suffix": "24ro4udw225ejjzzdshlgaj1bc.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "vm-ip-config-windows",
                "primary": true,
                "private_ip_address": "10.0.1.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/dfbc44eb-f4ee-4bb1-952a-f94f1edcd71d/resourceGroups/n01498358-assignment1-RG/providers/Microsoft.Network/publicIPAddresses/8358vm-windows-public-ip",
                "subnet_id": "/subscriptions/dfbc44eb-f4ee-4bb1-952a-f94f1edcd71d/resourceGroups/n01498358-assignment1-RG/providers/Microsoft.Network/virtualNetworks/8358vnet/subnets/subnet1"
              }
            ],
            "location": "eastus",
            "mac_address": "60-45-BD-F0-C6-48",
            "name": "8358vm-nic-windows",
            "private_ip_address": "10.0.1.6",
            "private_ip_addresses": [
              "10.0.1.6"
            ],
            "resource_group_name": "n01498358-assignment1-RG",
            "virtual_machine_id": "/subscriptions/dfbc44eb-f4ee-4bb1-952a-f94f1edcd71d/resourceGroups/n01498358-assignment1-RG/providers/Microsoft.Compute/virtualMachines/vm-windows"
          },
          "dependencies": [
            "module.network.azurerm_subnet.subnet",
            "module.network.azurerm_virtual_network.vnet",
            "module.rgroup.azurerm_resource_group.rgroup",
            "module.vm_windows.azurerm_public_ip.vm_windows_public_ip"
          ]
        }
      ]
    },
    {
      "module": "module.vm_windows",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vm_windows_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "win8358publicip",
            "fqdn": "win8358publicip.eastus.cloudapp.azure.com",
            "id": "/subscriptions/dfbc44eb-f4ee-4bb1-952a-f94f1edcd71d/resourceGroups/n01498358-assignment1-RG/providers/Microsoft.Network/publicIPAddresses/8358vm-windows-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.115.5.80",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "8358vm-windows-public-ip",
            "resource_group_name": "n01498358-assignment1-RG",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "Environment": "Lab",
              "ExpirationDate": "2023-06-30",
              "Name": "sahil.solanki",
              "Project": "Automation Project – Assignment 1"
            }
          },
          "dependencies": [
            "module.rgroup.azurerm_resource_group.rgroup"
          ]
        }
      ]
    }
  ]
}